Fix the alignment of 'find your course'

--- a/app/webpacker/styles/category.scss
+++ b/app/webpacker/styles/category.scss
@@ -263,6 +263,7 @@
 }
 
 .find-your-course {
+  margin: auto;
   max-width: 60em;
   border-top: 1px solid $grey-mid;
   padding-top: 3em;
